# smart-assignment

./: .env.example  .flake8  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/skills/sync-env/: SKILL.md
.github/workflows/: ci.yml  pages.yml
analysis/: README.md  __init__.py  run_dlvr_window_dashboard.py
analysis/dlvr_window/: __init__.py  app.py  charts.py  data.py
deployment/: deploy.py
deployment/langfuse/: README.md  podman-langfuse.sh
deployment/phoenix/: README.md  phoenix.ps1  phoenix.sh
deployment/terraform/: README.md
docs/: index.html
docs/architecture/: README.md
eval/: README.md  __init__.py  build_evalset.py  capture.py  case_selection.py  case_source.py  conftest.py  dataset.py  deepeval_llm.py  freeze_dataset.py  golden_cases.py  outcome_scoring.py  sage_judge_llm.py  synthetic.py  test_eval.py  test_quality.py  test_rationale_faithfulness.py  test_response_match.py
eval/data/: captured_responses.json  slot_recommendation.test.json
eval/data/snapshots/synthetic_v1/: cases.json  geocode.json  manifest.json  routes.json
scripts/: curate_feedback.py  generate_page.py  phoenix_curate.py  run_local.py  run_web.py
smart_assignment/: __init__.py  agent.py  mock_customers.py  pipeline.py  prompts.py  reasoning.py  reasoning_prompts.py
smart_assignment/address_resolve/: __init__.py  evidence.py  llm.py  prompts.py  resolver.py  schema.py  verifier.py
smart_assignment/data_prep/: prep_delivery_data.py  prep_dlvry_tw_data.py
smart_assignment/ds_utils_lite/: README.md  database_creds_template.json.example  pyproject.toml
smart_assignment/ds_utils_lite/ds_utils/: __init__.py  _version.py  base_abc.py  data.py  file_handlers.py  formatting.py  logger.py  sql.py
smart_assignment/ds_utils_lite/ds_utils/deploy/: __init__.py  enviro.py  mode.py
smart_assignment/ds_utils_lite/tests/: conftest.py  test_prep_dlvry_tw_integration.py
smart_assignment/feedback/: __init__.py  capture.py  curate.py  emit.py  schema.py  scrub.py  store.py
smart_assignment/integrations/: __init__.py  census_geocoder.py  geocoding_client.py  route_capacity_client.py  snapshot_data.py
smart_assignment/judgment/: __init__.py  evidence.py  judge.py  llm.py  prompts.py  schema.py  verifier.py
smart_assignment/queries/: cust_tier.sql  dlvr_window.sql  dlvr_window_fact.sql  routes.sql
smart_assignment/reporting/: __init__.py  page.py
smart_assignment/routeslot/: __init__.py  decide.py  evidence.py  llm.py  prompts.py  schema.py  verifier.py
smart_assignment/shared/: __init__.py  config.py  constraints.py  customer.py  geo.py  llm.py  models.py  scoring.py  slot_selection.py  timeutils.py  tools.py  tracing.py
smart_assignment/slotpick/: __init__.py  evidence.py  llm.py  prompts.py  schema.py  selector.py  verifier.py
smart_assignment/tools/: __init__.py  slot_recommendation.py
smart_assignment/triage/: __init__.py  agent.py  context.py  formatting.py  prompts.py  verifier.py
smart_assignment/webapp/: __init__.py  app.py  decision.py  deterministic_chat.py  llm_chat.py  narration.py  parse.py
smart_assignment/webapp/static/: app.css  app.js  feedback.js  frontend.css  frontend.html  frontend.js  index.html
smart_assignment/workflows/: __init__.py
smart_assignment/workflows/slot_recommendation/: __init__.py  agent_tools.py  conversational_agent.py  graph.py  nodes.py  pipeline.py  prompts.py  reasoning.py
tests/: conftest.py  test_offline_import.py  test_pipeline.py  test_reasoning.py
tests/address_resolve/: test_evidence_and_schema.py  test_resolver.py  test_verifier.py
tests/data_prep/: test_prep_delivery_data.py  test_prep_dlvry_tw_integration.py
tests/eval/: __init__.py  conftest.py  test_build_evalset.py  test_capture.py  test_case_selection.py  test_case_source.py  test_dataset.py  test_dataset_lock.py  test_dataset_snapshot.py  test_deepeval_llm.py  test_freeze_dataset.py  test_outcome_scoring.py  test_phoenix_curate.py  test_sage_judge_llm.py  test_synthetic.py
tests/feedback/: test_capture.py  test_curate.py  test_emit.py  test_schema.py  test_scrub.py  test_store.py
tests/integrations/: test_census_geocoder.py  test_geocoder_resolution.py  test_geocoder_suggest.py  test_route_capacity_strict.py  test_route_data_source.py  test_snapshot_data.py
tests/judgment/: conftest.py  test_evidence_and_schema.py  test_judge.py  test_pipeline_flag.py  test_ui_notice.py  test_verifier.py
tests/reporting/: __init__.py  test_page.py
tests/routeslot/: conftest.py  test_decide.py  test_evidence_verifier.py  test_grounded_escalation.py  test_llm.py  test_scoring.py
tests/shared/: test_constraints.py  test_customer.py  test_llm.py  test_role_models.py  test_scoring.py  test_slot_selection.py  test_timeutils.py  test_tools.py  test_tracing.py
tests/slotpick/: conftest.py  test_evidence_and_schema.py  test_selector.py  test_verifier.py
tests/tools/: test_resolve_address_tool.py  test_slot_recommendation.py
tests/triage/: test_context.py  test_formatting.py  test_verifier.py  test_wiring.py
tests/webapp/: test_app.py  test_decision.py  test_dotenv.py  test_feedback_endpoint.py  test_llm_chat.py  test_narration.py  test_parse.py
tests/workflows/: test_agent_tools.py  test_reasoning.py  test_slot_recommendation.py
