[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-assignment"
version = "0.1.0"
description = "Agentic workflows for automated delivery slot/day assignment for new customers, built on Google ADK."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "google-adk>=2.3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
include = ["smart_assignment*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
