[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-assignment"
version = "0.1.0"
description = "Agentic workflows for automated delivery slot/day assignment for new customers, built on Google ADK."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "google-adk>=2.3.0",
    "pydantic>=2.0",
    "requests>=2.31",
    "truststore>=0.9.1",
    "pandas>=2.0",
    "ds-utils-lite",
    "python-dotenv>=1.0",
    # Transitive deps for the vendored Sage SDK (loaded via sys.path in shared/llm.py)
    "json-repair>=0.52.3",
    "litellm==1.83.7",
    "httpx>=0.27",
    "aiohttp>=3.8.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black",
    "isort",
    "flake8",
    "google-adk[extensions]>=2.3.0",  # litellm, so tests can exercise a litellm-routed model
]
# A litellm-style SMART_ASSIGNMENT_MODEL (see shared/llm.py), e.g.
# "openai/gpt-4o-mini", needs litellm -- pulled in via ADK's "extensions" extra.
litellm = [
    "google-adk[extensions]>=2.3.0",
]
# The live chat web app (smart_assignment/webapp). Runs the deterministic
# pipeline offline -- no LLM key needed. Serve with:
#   uvicorn smart_assignment.webapp.app:app --reload
web = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
# Exploratory dashboards under analysis/ (Streamlit + Plotly).
analysis = [
    "streamlit>=1.32",
    "plotly>=5.18",
]
# Opt-in OpenTelemetry tracing (smart_assignment/shared/tracing.py). Kept OUT of
# `dev` so the test suite never requires it and imports stay credential-free:
# with SMART_ASSIGNMENT_USE_TRACING off (the default) none of this is imported.
# Exports OTLP spans to any OTLP backend -- e.g. a self-hosted Langfuse instance.
observability = [
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
]

[tool.setuptools.packages.find]
include = ["smart_assignment*"]

[tool.setuptools.package-data]
# Ship the web app's static assets (chat HTML/CSS/JS, vendored Leaflet under
# static/vendor/) inside the package so a wheel build serves them, not just
# editable installs. Recursive glob to reach the nested vendor/ files.
"smart_assignment.webapp" = ["static/**/*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
ds-utils-lite = { path = "smart_assignment/ds_utils_lite", editable = true }
